--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h2>Book detail</h2>
+<table>
+  <tbody>
+    <tr>
+      <td><%= link_to books_path do %>
+          <%= @user.name %></td>
+          <% end %>
+      <td><%= @books.title %></td>
+      <td> <%= @books.body %></td>
+        <% if @user.id == current_user.id %>
+        <td><%= link_to "Edit",edit_book_path(@books.id) %></td>
+        <td><%= link_to 'Destroy',book_path(@books.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        <% else %>
+        <% end %>
