--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,6 @@
+<%= render 'homes/form' %>
+
+
  <h2>Books</h2>
  <table>
     <thead>
@@ -7,25 +10,14 @@
             <th>Opinion</th>
         </tr>
     </thead>
-    
     <tbody>
        <% @books.each do |book| %>
     　　<tr>
-    　　 <td></td>
-         <td> <%= book.title %> </td>
+        <td><%= link_to users_path do %>
+         <td> <%= link_to book.title, book_path(book.id) %> </td>
          <td> <%= book.body %> </td>
     　　</tr>
     　 <% end %>
+    　<% end %>
+    </tbody>
 </table>
-  
-  
-  
- <h2>New book</h2>
-  <%= form_with model:@book, local: true do |f| %>
-<h5>Title</h5> 
-  <%= f.text_field :title %>
-<h5>Opinion</h5> 
-  <%= f.text_area :body %>
-<p><%= f.submit 'Create Book' %>
-
-  <% end %>
