--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
+<%= render 'homes/form' %>
+
 <h3>user info</h3>
-  <%# <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback"  %>
+  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback" %>
     <table>
       <tbody>
         <tr><th>name</th><th><p><%= @user.name %></p></th></tr>
@@ -11,15 +13,32 @@
     <% end %>
   </div>
 
-
-
 <h2>New book</h2>
   <%= form_with model:@book, local: true do |f| %>
-<h5>Title</h5> 
+<h5>Title</h5>
   <%= f.text_field :title %>
-<h5>Opinion</h5> 
+<h5>Opinion</h5>
   <%= f.text_area :body %>
   <p><%= f.submit 'Create Book' %>
 
 <% end %>
 
+<h2>Users</h2>
+<table>
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @users.each do |user| %>
+    <tr>
+  　  <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: 'no_image.jpg', size:'50x50', class: "attachment user profile_image fallback" %></td>
+    　　  <%#確認画像の表示 %>
+     <td><%= user.name %></td>
+     <td><%= link_to "Show",user_path(user.id) %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
