--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<%= render 'homes/form' %>
+
+<h2>Books</h2>
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+        </tr>
+    </thead>
+    <tbody>
+       <% @books.each do |book| %>
+    　　<tr>
+    　　 <td><%= link_to user_path(book.user) do %>
+           <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback" %></td>
+           <% end %>
+    　　  <%#確認画像の表示 %>
+         <td><%= link_to book_path(book.id) do %>
+         <%= book.title %> </td>
+         <% end %>
+         <td> <%= book.body %> </td>
+    　　</tr>
+    　　<% end %>
+    </tbody>
+</table>
