--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
 <%= render 'homes/form' %>
 
-
  <h2>Books</h2>
  <table>
     <thead>
@@ -12,12 +11,37 @@
     </thead>
     <tbody>
        <% @books.each do |book| %>
-    　　<tr>
-        <td><%= link_to users_path do %>
+    <tr>
+        <td><%= link_to user_path(book.user) do %>
+        <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback" %></td>
+        <% end %>
          <td> <%= link_to book.title, book_path(book.id) %> </td>
          <td> <%= book.body %> </td>
-    　　</tr>
-    　 <% end %>
-    　<% end %>
+    </tr>
+     <% end %>
     </tbody>
 </table>
+
+<h3>user info</h3>
+  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback" %>
+    <table>
+      <tbody>
+        <tr><th>name</th><th><p><%= @user.name %></p></th></tr>
+        <tr><th>introduction</th><th><p><%= @user.introduction %></p></th></tr>
+      </tbody>
+    </table>
+    <% if @user.id == current_user.id %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user)%></p>
+    <% end %>
+  </div>
+
+<h2>New book</h2>
+  <%= form_with model:@book, local: true do |f| %>
+<h5>Title</h5>
+  <%= f.text_field :title %>
+<h5>Opinion</h5>
+  <%= f.text_area :body %>
+  <p><%= f.submit 'Create Book' %>
+ <% end %>
+
+
