--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,13 +2,44 @@
 <table>
   <tbody>
     <tr>
-      <td><%= link_to books_path do %>
+      <td><%= link_to user_path(@books.user) do %>
+          <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'50x50', class: "attachment user profile_image fallback"  %></td>
+      <% end %>
+      <td><%= link_to user_path(@books.user) do %>
           <%= @user.name %></td>
-          <% end %>
+      <% end %>
       <td><%= @books.title %></td>
-      <td> <%= @books.body %></td>
-        <% if @user.id == current_user.id %>
-        <td><%= link_to "Edit",edit_book_path(@books.id) %></td>
-        <td><%= link_to 'Destroy',book_path(@books.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
-        <% else %>
-        <% end %>
+      <td><%= @books.body %></td>
+    <% if @user.id == current_user.id %>
+    <%#ログインユーザーだったら以下できる %>
+      <td><%= link_to "Edit",edit_book_path(@books.id) %></td>
+      <td><%= link_to 'Destroy',book_path(@books.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+    <% else %>
+    <% end %>
+  </tbody>
+</table>
+        
+        
+        
+  <h3>user info</h3>
+  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback" %>
+    <table>
+      <tbody>
+        <tr><th>name</th><th><p><%= @user.name %></p></th></tr>
+        <tr><th>introduction</th><th><p><%= @user.introduction %></p></th></tr>
+      </tbody>
+    </table>
+    <% if @user.id == current_user.id %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user)%></p>
+    <% end %>
+  </div>
+  
+  
+  <h2>New book</h2>
+  <%= form_with model:@book, local: true do |f| %>
+<h5>Title</h5>
+  <%= f.text_field :title %>
+<h5>Opinion</h5>
+  <%= f.text_area :body %>
+  <p><%= f.submit 'Create Book' %>
+ <% end %>
