--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<% if  @book.errors.any? %>
+  <div>
+    <ul style="color: red">
+     <li style= "list-style:none ">
+        <%= pluralize(@book.errors.count, "error") %>
+        prohibited this book from being saved:</li>
+        <% @book.errors.full_messages.each do |message| %>
+     <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<h1>Editing Book</h1>
+
+<%= form_with model:@book, local: true do |f| %>
+<h5>Title</h5>
+<%= f.text_field :title %>
+<h5>Opinion</h5>
+<%= f.text_area :body %>
+<p>
+<%= f.submit 'Update Book' %>
+</p>
+<% end %>
+
+  <%= link_to "Show", book_path(@book.id) %>
+  <%= link_to "Back", books_path %>
+
