--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,19 @@
 <%= render 'homes/form' %>
 
+<% if  @book.errors.any? %>
+  <div>
+    <ul style="color: red">
+     <li style= "list-style:none ">
+        <%= pluralize(@book.errors.count, "error") %>
+        prohibited this book from being saved:</li>
+        <% @book.errors.full_messages.each do |message| %>
+     <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
  <h2>Books</h2>
  <table>
     <thead>
