--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h2>User info</h2>
+
+<%= form_with model:@user, local:true do |f| %>
+<h4>Name</h4>
+  <%= f.text_field :name %>
+  <%#ここに画像投稿機能%>
+<h4>Image</h4>
+  <%= f.attachment_field :profile_image %>
+  <%#カラム名をidぬかして記述 %>
+<h4>Intoroduction</h4>
+  <%= f.text_field :introduction %>
+
+  <%= f.submit "Update User" %>
+  
+<% end %>
