--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,6 @@
+<%= render 'homes/header' %>
+
+
 <h2>User info</h2>
 
 <%= form_with model:@user, local:true do |f| %>
@@ -11,5 +14,5 @@
   <%= f.text_field :introduction %>
 
   <%= f.submit "Update User" %>
-  
+
 <% end %>
