--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
-<%= render 'homes/form' %>
-
+<%= render 'homes/header' %>
 
 <h2>Users</h2>
 <table>
@@ -22,26 +21,7 @@
 </table>
 
 
-<h3>user info</h3>
-  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: 'no_image.jpg', size:'100x100', class: "attachment user profile_image fallback" %>
-    <table>
-      <tbody>
-        <tr><th>name</th><th><p><%= @user.name %></p></th></tr>
-        <tr><th>introduction</th><th><p><%= @user.introduction %></p></th></tr>
-      </tbody>
-    </table>
-    <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user)%></p>
-    <% end %>
-  </div>
+<%= render 'homes/info', user: @user %>
 
-<h2>New book</h2>
-  <%= form_with model:@book, local: true do |f| %>
-<h5>Title</h5>
-  <%= f.text_field :title %>
-<h5>Opinion</h5>
-  <%= f.text_area :body %>
-  <p><%= f.submit 'Create Book' %>
-
-<% end %>
+<%= render 'homes/post', book: @book %>
 
